# Streamworks-KI

./: .env.example  .env.postgres  .env.production.template  .env.template  .gitignore  .htpasswd  .mcp.json  .pre-commit-config.yaml  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE_REFACTORING_PLAN.md  CHAT_XML_IMPLEMENTIERUNG_LEITFADEN.md  CHUNKING_AND_CLEANUP_IMPROVEMENTS.md  CITATION_SYSTEM.md  CLAUDE.md  CLEANUP_REPORT.md  CONTEXT.md  CONVERSATION_AI_V2_CONCEPT.md  DEVELOPMENT_IDEAS.md  DEVELOPMENT_LIFEHACKS.md  EFFIENCY_GUIDE.md  EMBEDDING_MODEL_UPDATE.md  ENHANCED_PARAMETER_EXTRACTION_IMPROVEMENTS.md  ENHANCED_SYSTEM_FINAL_EVALUATION.md  ENTERPRISE_PROMPT_SYSTEM.md  FRONTEND_MODERNIZATION_PHASE3_COMPLETE.md  GOALS.md  IMPLEMENTATION_ROADMAP.md  KAPITEL_4_ANALYSE.md  Kapitel_5_Implementierung.md  LANGEXTRACT_INTEGRATION_PLAN.md  LANGEXTRACT_NO_FALLBACK_READY.md  LANGEXTRACT_UI_INTEGRATION_TEST.md  MD_Konverter.md  Makefile  NEXT_STEPS.md  PARAMETER_ACCUMULATION_FIX.md  PGADMIN_CONNECTION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_PLAN.md  (+50 more)
backend/: .dockerignore  .env.development  .env.example  .pre-commit-config.yaml  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  Dockerfile.production  LLM_WECHSEL_ANLEITUNG.md  Makefile  README.md  SECURITY_DOCUMENTATION.md  ab_test_chunking_performance.py  alembic.ini  bm25_index.pkl  chromadb_analysis_20250707_175432.json  chromadb_analysis_20250707_175616.json  cleanup_all_data.py  cleanup_sessions.py  config.py  create_admin.py  create_chat_tables.sql  create_directories.py  create_tables_sync.py  database.py  debug_chunking.py  debug_chunking_detailed.py  debug_context_sent.py  debug_rag.py  debug_rag_retrieval.py  debug_specific_content.py  demo_langextract.py  docker-compose.yml  embeddinggemma_test.txt  example_generated.xml  final_embedding_test.txt  final_gamma_test.txt  fix_all_errors.py  fix_now.py  fix_training_files_view.sql  (+48 more)
backend/.backup_rag_services/: background_indexer.py  document_indexer.py  enterprise_chromadb_indexer.py  production_rag_service.py  rag_service.py
backend/analysis/: xml_structure_analysis.json
backend/app/: __init__.py  main.py  main_postgres.py
backend/auth/: dependencies.py  jwt_handler.py  models.py  routes.py
backend/calibration_results/: threshold_calibration.json
backend/config/: parameters.yaml  rag_modules.yaml
backend/core/: app_state.py
backend/domains/: __init__.py
backend/generated_xmls/: .gitkeep
backend/middleware/: auth_middleware.py  cors_error_handler.py  performance.py  rag_metrics_middleware.py  security.py
backend/migrations/: 001_create_auth_tables.sql  001_create_auth_tables_step1.sql  001_create_chat_tables.sql  001_sessions.sql  002_document_chunks.sql  002_streams.sql  003_add_status_values.sql  003_dropdown_options.sql  004_chat.sql  004_fix_enum_case.sql  005_seed_data.sql  006_folders.sql  README.md  add_ai_summary_fields.sql
backend/models/: __init__.py  auth.py  core.py  documents.py  enhanced_rag_models.py  langextract_models.py  parameter_models.py  rag.py  rag_metrics.py  source_grounded_models.py  wizard.py  xml_streams.py
backend/resources/: streamworks.xsd
backend/routers/: CLAUDE.md  __init__.py  auth.py  chat.py  chat_xml.py  chat_xml_unified.py  debug.py  documents.py  enhanced_chat_xml.py  feature_flags.py  folders.py  health.py  langextract_chat.py  options.py  performance.py  rag.py  rag_metrics.py  upload_progress_websocket.py  websockets.py  wizard.py  xml_generator.py  xml_streams.py
backend/schemas/: core.py  streamworks_export.xsd  streamworks_schemas.py  xml_generation.py  xml_streams.py
backend/scripts/: README.md  cleanup_config_chaos.py  cleanup_docs.py  cleanup_sessions.py  corpus_generator.py  debug_rag_metadata.py  debug_upload_crash.py  enrich_training_data_with_citations.py  evaluate_memory.py  evaluate_rag.py  evaluate_test_generation.py  generate_test_docs.py  generate_testset.py  load_production_documents.py  load_training_data_e5.py  load_universal_documents.py  migrate_to_postgres.py  read_user_pdf.py  seed_data.py  seed_documents.py  test_postgres_setup.py  verify_db.py  verify_live_system.py  verify_memory.py  xml_structure_analyzer.py  xsd_generator.py
backend/services/: CLAUDE.md  __init__.py  adaptive_chunker.py  adaptive_retrieval.py  advanced_cache_system.py  ai_response_cache.py  auth_service.py  bm25_service.py  chat_service.py  chat_service_sqlalchemy.py  chat_session_service.py  chat_title_generator.py  connection_monitor.py  consistency_service.py  container.py  contextual_embedder.py  conversation_engine.py  db.py  db_extensions.txt  dependency_validator.py  di_container.py  docling_ingest.py  document_chunk_service.py  document_filename_service.py  document_processor.py  document_registry.py  document_service.py  document_summarizer.py  embeddings.py  embeddings_backup.py  enhanced_hybrid_reranker.py  enterprise_cache.py  feature_flags.py  file_storage.py  folder_models.py  folder_service.py  health_service.py  hybrid_entity_recognizer.py  hybrid_query_service.py  hybrid_retriever.py  (+48 more)
backend/storage/: categories.json
backend/templates/: job_properties_template.xml  job_type_schemas.json  langextract_schemas.json  master_template.xml  streamworks_template.xml  template_config.json  unified_stream_schemas.json
backend/test_corpus/: sample_requirements.md  sample_streams.csv  sample_streams.xlsx
backend/test_corpus_large/: IT_Hardware_0.md  IT_Hardware_11.md  IT_Security_12.md  IT_Security_4.md  IT_Software_Katalog_12.md  IT_Software_Katalog_5.md  IT_VPN_10.md  IT_VPN_4.md  PROJ_Cloud_Native_Initiative_0.json  PROJ_Cloud_Native_Initiative_1.json  PROJ_Cloud_Native_Initiative_2.json  PROJ_Cloud_Native_Initiative_3.json  PROJ_Cloud_Native_Initiative_4.json  PROJ_Cloud_Native_Initiative_5.json  PROJ_Cloud_Native_Initiative_7.json  PROJ_Legacy_Shutdown_1.json  (+53 more)
(+2335 files in other folders)
